--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".flow.AdicionarDebitoActivity" />
-        <activity android:name=".flow.AdicionarTipoActivity"></activity>
+        <activity android:name=".flow.NovaContaActivity" />
+        <activity android:name=".flow.RelatorioActivity" />
+        <activity android:name=".flow.NovoItemContaActivity" />
+        <activity android:name=".flow.VisualizarContaActivity"></activity>
     </application>
 
 </manifest>
